--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
         <div class="product__cont">
             <h1 class="nombre">Odyssey 60% Custom</h1>
-            <p class="info desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo expedita, dicta voluptates eveniet magni sunt quam provident blanditiis unde magnam ea saepe doloremque enim ab quas odio aliquid doloribus.</p>
+            <p class="info desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo expedita, dicta voluptates eveniet magni sunt quam provident blanditiis unde magnam.</p>
             <ul class="info-ul">
-                <li class="info-li desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li class="info-li desc">Sed expedita assumenda numquam quae eum soluta aut.</li>
-                <li class="info-li desc">veniam nemo quas, saepe, enim optio aspernatur quod.</li>
+                <li class="info-li desc">Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+                <li class="info-li desc">Sed expedita assumenda numquam quae eum soluta.</li>
+                <li class="info-li desc">veniam nemo quas, saepe, enim optio aspernatur.</li>
             </ul>
             <h2 class="tipo">Tipo de Switch</h2>
             <select class="tipo-elegir">
